# anysiteonearth

./: .gitignore  README.md  package.json
infra/: product-resources.yaml
public/: _redirects
scripts/: submit-indexnow.mjs
services/scale/: .dockerignore  Dockerfile  README.md  RELEASE_SCALE_V1_3.md  k8s.yaml  pyproject.toml
services/scale/scale/: __init__.py  api.py  config.py  discovery.py  geo.py  high_resolution.py  inference.py  pipeline.py  schemas.py  sources.py  storage.py  tiles.py  training.py  twin.py  verification.py  worker.py
services/scale/scale/migrations/: 001_init.sql  002_postgrest_queue.sql  003_discovery_verification.sql  004_analysis_layers.sql  005_road_gps_verification.sql  006_trip_twins.sql  007_analysis_queue_lease.sql
services/scale/scripts/: render_aoi_layers.py
services/scale/tests/: test_api.py  test_discovery.py  test_geo.py  test_inference.py  test_multisource.py  test_osm_source.py  test_storage.py  test_tiles.py  test_twin.py  test_verification.py  test_worker.py
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/[locale]/: page.tsx
src/app/[locale]/account/: page.tsx
src/app/[locale]/workspace/: page.tsx
src/app/scale/: page.tsx
src/app/workspace/: page.tsx
src/components/: AnysiteExperience.tsx  AnysiteLogoMotion.tsx  InteractiveEarthGlobe.tsx  ScaleMap.tsx  ScaleWorkspace.tsx  TripTwinPlayer.tsx
src/components/auth/: SharedAccountPanel.tsx
src/lib/: brandAssets.ts  productI18n.ts  scaleClient.ts
src/types/: index.ts
