[project]
name = "anysite-scale"
version = "1.2.0"
description = "Scale v1 multi-scale geospatial inference service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.5,<3",
  "httpx[socks]>=0.27,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "shapely>=2.0,<3",
  "pyproj>=3.6,<4",
  "numpy>=1.26,<3",
  "rasterio>=1.3,<2",
  "pystac-client>=0.8,<1",
  "planetary-computer>=1.0,<2",
  "networkx>=3.3,<4",
]

[project.optional-dependencies]
ml = [
  "lightgbm>=4.5,<5",
  "shap>=0.46,<1",
  "joblib>=1.4,<2",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
]
test = ["pytest>=8,<9", "pytest-cov>=5,<6", "respx>=0.21,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
